ubuntu-image (1.8+20.04ubuntu3) UNRELEASED; urgency=medium

  [ Maciej Borzecki ]
  * ubuntu_image: update schema validator to allow gadget update specific
    keys & little cleanups.  (LP: #1856903)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Thu, 19 Dec 2019 19:22:57 +0100

ubuntu-image (1.8+20.04ubuntu2) focal; urgency=medium

  * Fix manifest generation for uc20 builds.  (LP: #1856205)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Thu, 12 Dec 2019 17:05:59 +0100

ubuntu-image (1.8+20.04ubuntu1) focal; urgency=medium

  [ Łukasz 'sil2100' Zemczak ]
  * Add support for uc20 images and the system-seed partition role.
    (LP: #1847231)

  [ Alfonso Sanchez-Beato ]
  * Add support for LK (little kernel) bootloader (LP: #1845964)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Tue, 08 Oct 2019 12:56:43 +0200

ubuntu-image (1.7+19.10ubuntu6) eoan; urgency=medium

  * Require isolation-machine for snapcraft specific autopkgtests

 -- Sergio Schvezov <sergio.schvezov@canonical.com>  Thu, 12 Sep 2019 12:59:48 +0000

ubuntu-image (1.7+19.10ubuntu5) eoan; urgency=medium

  * Fix previous upload, to also fix E501 long line error

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 30 Jul 2019 12:24:12 +0200

ubuntu-image (1.7+19.10ubuntu4) eoan; urgency=medium

  * Try to fix F723 syntax error in type comment

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 30 Jul 2019 11:39:33 +0200

ubuntu-image (1.7+19.10ubuntu3) eoan; urgency=medium

  [ Dimitri John Ledkov ]
  * Use modern apt commands.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 30 Jul 2019 08:26:32 +0200

ubuntu-image (1.7+19.10ubuntu2) eoan; urgency=medium

  * Fix E117 over-indended line

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 30 Jul 2019 08:03:58 +0200

ubuntu-image (1.7+19.10ubuntu1) eoan; urgency=medium

  [ Maciej Borzecki ]
  * Some parser improvements: more strict schema for volume names, make sure