@@ -431,7 +431,10 @@ class TestClassicBuilder(TestCase):
             with open(meta_data, 'r', encoding='utf-8') as fp:
                 self.assertEqual(fp.read(), 'instance-id: nocloud-static\n')
 
-    def test_populate_rootfs_contents_grub_boot_remove(self):
+    def test_populate_rootfs_contents_grub_boot_preserved(self):
+        # We changed our design, so this test is here to make sure the new
+        # design of preserving /boot/grub works.  Previously we removed all
+        # contents of that directory, leaving it empty.
         with ExitStack() as resources:
             workdir = resources.enter_context(TemporaryDirectory())
             args = SimpleNamespace(
@@ -484,10 +487,10 @@ class TestClassicBuilder(TestCase):
             state._next.pop()
             state._next.append(state.populate_rootfs_contents)
             next(state)
-            # /boot/grub should persist, but not the files inside
+            # /boot/grub should persist
             self.assertTrue(os.path.exists(grub_dir))
-            self.assertFalse(os.path.exists(grub_inside_dir))
-            self.assertFalse(os.path.exists(grub_file))
+            self.assertTrue(os.path.exists(grub_inside_dir))
+            self.assertTrue(os.path.exists(grub_file))
 
     def test_populate_bootfs_contents(self):
         # This test provides coverage for populate_bootfs_contents() when a
